ReplyService fix